--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -4,7 +4,21 @@ project(cli LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(cli src/entry.cpp)
+file(GLOB_RECURSE CLI_SRC CONFIGURE_DEPENDS LIST_DIRECTORIES false
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.[ch]pp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cxx"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
+)
+
+add_executable(cli ${CLI_SRC})
+
+#[[ DEPENDENCIES ]]
+
+find_package(unofficial-sodium CONFIG REQUIRED)
+target_link_libraries(cli PRIVATE unofficial-sodium::sodium)
+
+#[[ END DEPENDENCIES ]]
 
 set_target_properties(cli PROPERTIES OUTPUT_NAME "umbra")
 
