--- a/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
+++ b/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
@@ -1,8 +1,10 @@
 name: CMake + vcpkg (multi-OS)
 
 on:
-  push: { branches: [ main ] }
+  push:
+    branches: [ "master" ]
   pull_request:
+    branches: [ "master" ]
 
 jobs:
   build:
