--- a/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
+++ b/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
@@ -29,8 +29,15 @@ jobs:
 
       - name: CMake & Ninja
         uses: lukka/get-cmake@latest
+
       - name: Ensure Ninja on PATH (fallback)
         uses: ashutoshvarma/setup-ninja@v1.1
+
+      - name: macOS build deps
+        if: startsWith(runner.os, 'macOS')
+        run: |
+          brew update
+          brew install autoconf automake libtool pkg-config
 
       - name: Setup vcpkg (manifest-aware, cached)
         uses: lukka/run-vcpkg@v11
