--- a/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
+++ b/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
@@ -59,7 +59,7 @@ jobs:
           -DVCPKG_TARGET_TRIPLET="${{ matrix.triplet }}"
 
       - name: Configure (Linux/MacOS)
-        if: !startsWith(runner.os, 'Windows')
+        if: runner.os != 'Windows'
         run: >
           cmake -S . -B build -G Ninja
           -DCMAKE_BUILD_TYPE=Release
