--- a/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
+++ b/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
@@ -21,7 +21,8 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     env:
-      VCPKG_FEATURE_FLAGS: manifests,binarycaching
+      VCPKG_FEATURE_FLAGS: manifests,binarycaching,versions,registries
+      VCPKG_BINARY_SOURCES: clear;nuget,GitHub,readwrite
 
     steps:
       - uses: actions/checkout@v4
@@ -33,20 +34,35 @@ jobs:
       - name: Ensure Ninja on PATH (fallback)
         uses: ashutoshvarma/setup-ninja@v1.1
 
-      - name: windows msvc requirement
+      - name: Windows MSVC Requirement
         if: startsWith(runner.os, 'Windows')
         uses: ilammy/msvc-dev-cmd@v1
         with:
           arch: x64
 
-      - name: macOS build deps
+      - name: MacOS Build Deps
         if: startsWith(runner.os, 'macOS')
         run: |
           brew update
           brew install autoconf automake libtool pkg-config
 
+      - name: Linux Build Deps
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            build-essential pkg-config autoconf automake libtool m4 \
+            nasm yasm ninja-build python3 git
+
       - name: Setup vcpkg (manifest-aware, cached)
         uses: lukka/run-vcpkg@v11
+
+      - name: Vcpkg Install
+        run: |
+          ${{ env.VCPKG_ROOT }}/vcpkg install \
+            --triplet ${{ matrix.triplet }} \
+            --x-manifest-root=${{ github.workspace }} \
+            --feature-flags="${{ env.VCPKG_FEATURE_FLAGS }}" --debug
 
       - name: Configure (Windows)
         if: startsWith(runner.os, 'Windows')
