--- a/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
+++ b/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
@@ -58,20 +58,7 @@ jobs:
         uses: lukka/run-vcpkg@v11
 
       - name: Vcpkg Install (Windows)
-        if: startsWith(runner.os, 'Windows')
-        shell: pwsh
-        run: >
-          & "${env:VCPKG_ROOT}\vcpkg.exe" install --triplet "${{ matrix.triplet }}"
-          --x-manifest-root="${env:GITHUB_WORKSPACE}" --feature-flags="${env:VCPKG_FEATURE_FLAGS}" --debug
-
-      - name: Vcpkg Install (Linux/MacOS)
-        if: runner.os != 'Windows'
-        shell: bash
-        run: |
-          "$VCPKG_ROOT/vcpkg" install \
-            --triplet "${{ matrix.triplet }}" \
-            --x-manifest-root="${GITHUB_WORKSPACE}" \
-            --feature-flags="${VCPKG_FEATURE_FLAGS}" --debug
+        run: "${env:VCPKG_ROOT}\vcpkg.exe" install --triplet "${{ matrix.triplet }}" --x-manifest-root="${env:GITHUB_WORKSPACE}" --feature-flags="${env:VCPKG_FEATURE_FLAGS}" --debug
 
       - name: Configure (Windows)
         if: startsWith(runner.os, 'Windows')
