--- a/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
+++ b/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
@@ -52,7 +52,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             build-essential pkg-config autoconf automake libtool m4 \
-            nasm yasm ninja-build python3 git mono-complete ca-certificates-mono
+            nasm yasm ninja-build python3 git mono-complete ca-certificates-mono \
+            # X11 + GL bits needed by glfw/bgfx:
+            xorg-dev libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev \
+            mesa-common-dev libglu1-mesa-dev
 
       - name: Setup vcpkg (manifest-aware, cached)
         uses: lukka/run-vcpkg@v11
@@ -64,7 +67,7 @@ jobs:
           & "${env:VCPKG_ROOT}\vcpkg.exe" install `
           --triplet "${{ matrix.triplet }}" `
           --x-manifest-root="${env:GITHUB_WORKSPACE}" `
-          --feature-flags="${env:VCPKG_FEATURE_FLAGS}" --debug
+          --feature-flags="${env:VCPKG_FEATURE_FLAGS}"
 
       - name: Vcpkg Install (Linux/MacOS)
         if: runner.os != 'Windows'
@@ -73,7 +76,7 @@ jobs:
           "$VCPKG_ROOT/vcpkg" install \
             --triplet "${{ matrix.triplet }}" \
             --x-manifest-root="${GITHUB_WORKSPACE}" \
-            --feature-flags="${VCPKG_FEATURE_FLAGS}" --debug
+            --feature-flags="${VCPKG_FEATURE_FLAGS}"
 
       - name: Configure (Windows)
         if: startsWith(runner.os, 'Windows')
