--- a/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
+++ b/.github/workflows/cmake-multi-platform-vcpkg-integration.yml
@@ -48,14 +48,15 @@ jobs:
 
       - name: Linux Build Deps
         if: runner.os == 'Linux'
+        shell: bash
         run: |
+          set -euo pipefail
           sudo apt-get update
           sudo apt-get install -y \
             build-essential pkg-config autoconf automake libtool m4 \
             nasm yasm ninja-build python3 git mono-complete ca-certificates-mono \
-            # X11 + GL bits needed by glfw/bgfx:
-            xorg-dev libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev \
-            mesa-common-dev libglu1-mesa-dev
+            libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxxf86vm-dev \
+            mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev
 
       - name: Setup vcpkg (manifest-aware, cached)
         uses: lukka/run-vcpkg@v11
